<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">学习助手</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="studyaid">学习助手</string>
    <string name="function2">我的课程表</string>
    <string name="function1">我要蹭课</string>
    <string name="function3">推荐课程</string>
    <string name="function4">及时提醒</string>
    <string name="function5">课堂笔记</string>
    <string name="function6">疑惑解答</string>
    <string name="coursedetail">课程详情</string>
    <string name="lookcourse">查看我的课程表</string>
    <string name="addsearchplan">添加到我的蹭课计划</string>
    <string name="ck_string">请输入您要蹭的课程</string>
    <string name="makeplan">制定我的蹭课计划</string>
    <string name="ok">确定</string>
    <string name="bt_search">搜索</string>
    <string name="copyright">Copyright ©</string>
    <string name="about_us">关于我们</string>
    <string name="contact_us">Contact Us</string>
    <string name="back">返回</string>
    <string name="about_content">This project is produced by a gourp of five from sofomore majoring in Computer and Software. We are novice in this area, so here some dissatisfactories in this APP. And you are welcomed to give us advices. Click contact us button to send e-mail to us.</string>
    <string name="my_note">我的课堂笔记</string>
    <string name="user">用户信息</string>
    <string name="search_course">打开蹭课功能</string>
    <string name="course_look">打开课程表查看功能</string>
    <string name="share_course">打开课程推荐功能</string>
    <string name="reminder_you">打开提醒功能</string>
    <string name="note_function">打开课程笔记功能</string>
    <string name="help_you">打开疑惑解答功能</string>
    <string name="About_us">打开了解我们</string>
    <string name="addition">侧边栏</string>
    <string name="demostrate">此按钮只做过渡的演示\u2026</string>
    <string name="add_category">添加分类</string>
    <string name="my_course">我的课表</string>
    <string name="quit_addition_note">取消</string>
    <string name="add_from_exist">从已有课程中添加</string>
    <string name="add_new_course">添加新课程</string>
    <string name="edit_course">修改课程表</string>
    <string name="quit_addition_course">取消</string>
    <string name="editing">编辑中\u2026</string>
    <string name="modify_message">修改备注</string>
    <string name="change_picture">替换图片</string>
    <string name="delete_note_item">删除</string>
    <string name="quit_for_more">取消</string>

</resources>