<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/modify_message"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/modify_message"
        android:visible="true"/>
    <item
        android:id="@+id/change_picture"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:title="@string/change_picture"
        android:visible="true"/>
    <item
        android:id="@+id/delete_note_item"
        android:orderInCategory="3"
        android:showAsAction="never"
        android:title="@string/delete_note_item"
        android:visible="true"/>
    <item
        android:id="@+id/quit_for_more"
        android:orderInCategory="3"
        android:showAsAction="never"
        android:title="@string/quit_for_more"
        android:visible="true"/>

</menu>