<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item 
        android:id="@+id/add_from_exist"
        android:title="@string/add_from_exist"
        android:visible="true"
        android:orderInCategory="1"
        android:showAsAction="never"/>
    <item 
        android:id="@+id/add_new_course"
        android:title="@string/add_new_course"
        android:visible="true"
        android:orderInCategory="2"
        android:showAsAction="never"/>
    <item 
        android:id="@+id/edit_course"
        android:title="@string/edit_course"
        android:visible="true"
        android:orderInCategory="3"
        android:showAsAction="never"/>
    <item 
        android:id="@+id/quit_addition_course"
        android:title="@string/quit_addition_course"
        android:visible="true"
        android:orderInCategory="4"
        android:showAsAction="never"/>

</menu>
