<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray" >

        <ImageView
            android:id="@+id/detail_to_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/coursedetail"
            android:textColor="@color/white"
            android:textSize="25dp" />
    </RelativeLayout>

    <Button 
        android:id="@+id/look_course"
        android:background="@color/gray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/alert"
        android:text="@string/lookcourse"
        android:layout_above="@+id/add_search_plan"/>
    <Button 
        android:id="@+id/add_search_plan"
        android:background="@color/gray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/plan"
        android:text="@string/addsearchplan"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>