<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray" >

        <ImageView
            android:id="@+id/search_to_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/function1"
            android:textColor="@color/white"
            android:textSize="25dp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal" >

        <SearchView
            android:id="@+id/search_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:iconifiedByDefault="false"
            android:queryHint="@string/ck_string" />

        <Button
            android:id="@+id/bt_search_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/bt_search"
            android:textColor="@color/white" />
    </LinearLayout>

    <!-- 此次用了一个按钮做过渡，使用时要注意去掉 -->
    <Button
        android:id="@+id/temp_bt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="此按钮只做过渡的演示，代替了列表项" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ListView
            android:id="@+id/search_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>
    </ScrollView>

</LinearLayout>